feat: query bookmarks (#1234)
* add query panel tab

* changes

* feat: query bookmarks

* fix: open document with codelens

* add elapsedTime in tab

* Add gradient button

* fix: untitled scheme

* fix: new tabs

* fix: query history and bookmark table with faker data

* fix: save history

* changes

* changes

* fix: for review comments

* fix: query history flow

* fix: feature flag

* fix: query bookmark save

* fix: fetch query bookmarks

* fix: execute query

* fix: merge issue

* fix: bookmarks backend integration

* fix: prepopulate tags

* fix: update bookmark privacy settings

* fix: my and shared bookmarks

* fix: bookmark filters

* fix: execute query from bookmark

* fix: query history search

* fix: history details ui

* fix: query bookmark details

* fix: delete bookmark

* fix: issues

* fix: tags in bookmark

* fix: delete after execute from bookmark

* fix: execute with new file

* fix: run adhoc query

* fix: history page ui

* fix: bookmarks ui

* fix: no history UI

* fix: filters using backend

* chore: cleanup

* fix: minor changes

* fix: flex layout

* fix: close btn for details

* fix: bookmark row with name and tags

* fix: paginated api integration

* fix: loading and filter changes in query bookmarks

* fix: get tags from backend

* fix: interactions, search

* chore: cleanup

* fix: ui changes

* chore: feedback and remove hint interval check

* chore: cleanup query bookmarks api calls

* fix: show history when executed from bookmarks or history

* fix: tags loading

* fix: close popup on body click

* revert: date format in preview file

* fix: query panel tab state and view result set

* fix: new feature indicator cleanup

* fix: disable legacy UX

* fix: text changes

* chore: remove legacy flag

* fix: decorator text for new file

* fix: minor issues

* Update package.json

Co-authored-by: Michiel De Smet <m

--- a/package.json
+++ b/package.json
@@ -76,10 +76,10 @@
             "description": "Enable dbt docs collaboration.",
             "default": true
           },
-          "dbt.enableNewQueryPanel": {
+          "dbt.enableQueryBookmarks": {
             "type": "boolean",
-            "description": "Enable the new query panel in dbt.",
-            "default": true
+            "description": "Enable Query history and bookmarks feature",
+            "default": false
           },
           "dbt.lineage.showSelectEdges": {
             "type": "boolean",
@@ -367,6 +367,10 @@
         "category": "dbt Power User"
       },
       {
+        "command": "dbtPowerUser.createSqlFile",
+        "title": "Create Power User SQL file"
+      },
+      {
         "command": "dbtPowerUser.replyToConversation",
         "title": "Reply",
         "enablement": "!commentIsEmpty",
@@ -641,6 +645,12 @@
       }
     ],
     "menus": {
+      "file/newFile": [
+        {
+          "command": "dbtPowerUser.createSqlFile",
+          "when": "dbt.enableQueryBookmarks == true"
+        }
+      ],
       "comments/commentThread/title": [
         {
           "command": "dbtPowerUser.viewInDocEditor",
