--- a/webview_panels/package.json
+++ b/webview_panels/package.json
@@ -12,7 +12,7 @@
     "dev": "vite",
     "watch": "rm -Rf ./dist; tsc && vite build --watch",
     "build": "rm -Rf ./dist; tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 5",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 7",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
@@ -40,6 +40,7 @@
     "react-textarea-autosize": "^8.5.3",
     "reactstrap": "^9.2.1",
     "remark-gfm": "^4.0.0",
+    "use-debounce": "^10.0.1",
     "vite-plugin-svgr": "^4.2.0",
     "yaml": "^2.4.1",
     "yup": "^1.3.3"
