fix: beta text and icons

--- a/package.json
+++ b/package.json
@@ -626,7 +626,7 @@
       },
       {
         "command": "dbtPowerUser.sqlLineage",
-        "title": "Visualize SQL",
+        "title": "Visualize SQL (Beta)",
         "category": "dbt Power User",
         "icon": "$(eye)"
       }
