fix: sql lineage changes (#1290)
* feat: added qualify validation

* feat: added hooks

* feat: added db schema fetch check for sql lienage

* WIP

* WIP

* WIP

* WIP

* fix: beta text and icons

* fix: feedback btn for sql visualizer

* Update new_lineage_panel/src/StaticLineage.tsx

* fix: overlapping issue

* fix: improve layout algo

* fix: select icon

* fix: styling

---------

Co-authored-by: saravmajestic <sarav.majestic@gmail.com>
Co-authored-by: surya <118222278+suryaiyer95@users.noreply.github.com>
Co-authored-by: anandgupta42 <93243293+anandgupta42@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -626,9 +626,9 @@
       },
       {
         "command": "dbtPowerUser.sqlLineage",
-        "title": "SQL Visualizer (Beta)",
+        "title": "Visualize SQL (Beta)",
         "category": "dbt Power User",
-        "icon": "$(debug-console)"
+        "icon": "$(eye)"
       }
     ],
     "keybindings": [
@@ -701,6 +701,10 @@
         {
           "command": "dbtPowerUser.translateQuery",
           "group": "datapilot@4"
+        },
+        {
+          "command": "dbtPowerUser.sqlLineage",
+          "group": "datapilot@5"
         }
       ],
       "editor/title": [
