--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
           "dbt.lineage.showNonSelectEdges": {
             "type": "boolean",
             "description": "Show non-select edges in lineage panel.",
-            "default": false
+            "default": true
           },
           "dbt.lineage.defaultExpansion": {
             "type": "number",
