--- a/webview_panels/package.json
+++ b/webview_panels/package.json
@@ -28,6 +28,7 @@
     "bootstrap": "^5.3.2",
     "idb": "^8.0.0",
     "react": "^18.2.0",
+    "react-arborist": "^3.4.0",
     "react-code-blocks": "^0.1.6",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
