feat: added documentation code lens
WIP

feat: added code lenses in documentation

feat: showing documenation on yaml file

--- a/package.json
+++ b/package.json
@@ -629,6 +629,11 @@
         "title": "Visualize SQL (Beta)",
         "category": "dbt Power User",
         "icon": "$(eye)"
+      },
+      {
+        "command": "dbtPowerUser.showDocumentation",
+        "title": "Show documentation",
+        "category": "dbt Power User"
       }
     ],
     "keybindings": [
