--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,6 @@
     ".vscode-test",
     "new_lineage_panel",
     "webview_panels"
-  ]
+  ],
+  "references": [{ "path": "./notebookrenderer/tsconfig.json" }]
 }
