--- a/package.json
+++ b/package.json
@@ -1235,6 +1235,7 @@
     "prettier": "^3.3.3",
     "prettier-eslint": "^15.0.1",
     "prettier-plugin-organize-imports": "^3.2.4",
+    "raw-loader": "^4.0.2",
     "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.4.4",
     "typescript": "^4.9.5",
@@ -1246,6 +1247,10 @@
     "ms-python.python"
   ],
   "dependencies": {
+    "@finos/perspective": "^2.10.0",
+    "@finos/perspective-viewer": "^2.10.0",
+    "@finos/perspective-viewer-d3fc": "^2.10.1",
+    "@finos/perspective-viewer-datagrid": "^2.10.0",
     "@vscode/codicons": "^0.0.36",
     "@vscode/extension-telemetry": "^0.9.6",
     "@vscode/vsce": "^2.31.1",
@@ -1258,6 +1263,8 @@
     "parse-diff": "^0.11.1",
     "preact": "^10.23.0",
     "python-bridge": "github:mdesmet/node-python-bridge#feat/detached",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "reflect-metadata": "^0.2.2",
     "semver": "^7.6.3",
     "which": "^4.0.0",
