--- a/webview_panels/package.json
+++ b/webview_panels/package.json
@@ -41,12 +41,16 @@
     "reactstrap": "^9.2.1",
     "remark-gfm": "^4.0.0",
     "use-debounce": "^10.0.1",
+    "vite-plugin-css-injected-by-js": "^3.5.1",
     "vite-plugin-svgr": "^4.2.0",
     "yaml": "^2.4.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.0",
+    "@rollup/plugin-commonjs": "^26.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@storybook/addon-essentials": "^7.6.6",
     "@storybook/addon-interactions": "^7.6.6",
     "@storybook/addon-links": "^7.6.6",
@@ -81,6 +85,8 @@
     "eslint-plugin-typescript-sort-keys": "^3.1.0",
     "eslint-plugin-you-dont-need-lodash-underscore": "^6.13.0",
     "factory.ts": "^1.4.1",
+    "rollup-plugin-legacy": "^1.0.0",
+    "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.69.6",
     "sass-loader": "^13.3.3",
     "storybook": "^7.6.6",
