--- a/webview_panels/package.json
+++ b/webview_panels/package.json
@@ -23,6 +23,9 @@
     "@finos/perspective-viewer-d3fc": "^2.10.0",
     "@finos/perspective-viewer-datagrid": "^2.10.0",
     "@hookform/resolvers": "^3.3.4",
+    "@jupyter-widgets/base": "^4.1.6",
+    "@jupyter-widgets/controls": "^3.1.7",
+    "@jupyter-widgets/schema": "^0.5.5",
     "@reduxjs/toolkit": "^2.0.1",
     "@vscode/codicons": "^0.0.35",
     "bootstrap": "^5.3.2",
