fix: add telemetry events (#1280)
* fix: add telemetry events

* fix: telemetry events for doc editor

* fix: ts error

* fix: datapilot events

* fix: fail to error, no success event

* fix: alias for telemetry events enum

* Update docsEditPanel.ts

---------

Co-authored-by: anandgupta42 <93243293+anandgupta42@users.noreply.github.com>

--- a/webview_panels/tsconfig.json
+++ b/webview_panels/tsconfig.json
@@ -29,10 +29,11 @@
       "@assets/*": ["src/assets/*"],
       "@modules/*": ["src/modules/*"],
       "@testUtils": ["src/testUtils/index.ts"],
-      "@vscodeApi": ["src/modules/vscode/index.ts"]
+      "@vscodeApi": ["src/modules/vscode/index.ts"],
+      "@telemetryEvents": ["../src/telemetry/events.ts"]
     },
     "typeRoots": ["src/modules/queryPanel/components/perspective"]
   },
-  "include": ["src", "vite.config.ts"],
+  "include": ["src", "vite.config.ts", "../src/telemetry/events.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
