--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,18 +18,39 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-      - run: npm install
-      - run: npm install
-        working-directory: ./new_lineage_panel
-      - run: npm install
-        working-directory: ./webview_panels
+      - name: Run common build steps
+        uses: ./.github/actions/common-build
+  release-vsstudio-marketplace:
+    runs-on: ubuntu-latest
+    if: success() && startsWith( github.ref, 'refs/tags/')
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Run common build steps
+        uses: ./.github/actions/common-build
       - name: Publish Visual Studio Marketplace
-        if: success() && startsWith( github.ref, 'refs/tags/') && matrix.os == 'ubuntu-latest'
-        uses: ./.github/workflows/release.yml#release-vsstudio-marketplace
+        run: |
+          if [ "${{ github.event_name }}" == "release" ] && [ "${{ github.event.release.prerelease }}" == "true" ]; then
+            npm run deploy-vscode -- --pre-release
+          else
+            npm run deploy-vscode
+          fi
+        env:
+          VSCE_PAT: ${{ secrets.VSCE_PAT }}
+  release-openvsx-marketplace:
+    runs-on: ubuntu-latest
+    if: success() && startsWith( github.ref, 'refs/tags/')
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Run common build steps
+        uses: ./.github/actions/common-build
       - name: Publish OpenVSX Marketplace
-        if: success() && startsWith( github.ref, 'refs/tags/') && matrix.os == 'ubuntu-latest'
-        uses: ./.github/workflows/release.yml#release-openvsx-marketplace
+        run: |
+          if [ "${{ github.event_name }}" == "release" ] && [ "${{ github.event.release.prerelease }}" == "true" ]; then
+            npm run deploy-openvsx -- --pre-release
+          else
+            npm run deploy-openvsx
+          fi
+        env:
+          OVSX_PAT: ${{ secrets.OVSX_PAT }}
